--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@types/react-dom": "^18.2.19",
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
+    "style-loader": "^3.3.4",
     "typescript": "^5.3.3",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4",
